# mongoose_apps

./: README.md
bellegram/: CMakeLists.txt  Makefile  README.md  packed_fs.c  sdkconfig.defaults
bellegram/main/: CMakeLists.txt  main.c  mongoose.h  mongoose_config.h  packed_fs.c
picowoose/: CMakeLists.txt  Makefile  README.md  main.c
pythongoose/: Makefile  README.md  main.py
pythongoose/mongoose/: main.c  mgmp.h  module.c
